--- a/.gitignore
+++ b/.gitignore
@@ -28,13 +28,13 @@ build/scala*
 build/zinc*
 cache
 checkpoint
-conf/*.cmd
-conf/*.conf
-conf/*.properties
-conf/*.sh
-conf/*.xml
-conf/java-opts
-conf/slaves
+#conf/*.cmd
+#conf/*.conf
+#conf/*.properties
+#conf/*.sh
+#conf/*.xml
+#conf/java-opts
+#conf/slaves
 dependency-reduced-pom.xml
 derby.log
 dev/create-release/*final
